[tool.poetry]
name = "eightfiveone"
version = "0.0.1"
description = "Profiling TensorRT inference of 1D convolutional network"
authors = ["Alec Gunny"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorrt = "8.5.1.7"
torch = "^1.10"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.core.masonry.api"
